--- a/posts/2016-02-06.md
+++ b/posts/2016-02-06.md
@@ -85,17 +85,17 @@ Imagine we have a large population where some of the people are A and some of th
 
 One easy way to visualize a distribution is just to draw a bunch of samples from it, then sort and plot them. This is an empirical form of the *cumulative density function*, which is a fancy way of saying "what fraction of samples land below various thresholds". We expect to see curves that start at zero (because no samples are smaller than the smallest value), end up at one (because all samples are smaller than the largest value), and only go upwards from left to right. The shape of the curve tells us where we find most of the samples: a very steep segment indicates that lots of samples suddenly came into play, a flat segment means no samples, and a sloped segment indicate a uniform distribution of samples.
 
-So let's look at the cumulative density functions for those A and B people. We'll sample 1,000 people and compute the A fraction, repeating 1,000 times so that we can draw a smooth looking line.
+So let's look at the cumulative density functions for those A and B people. We'll sample 1,000 people and compute the A count, repeating 1,000 times so that we can draw a smooth looking line.
 
 ![cdf](https://github.com/frankmcsherry/blog/blob/master/assets/privacy/primer/cdf1.png)
 
-As expected, we see a sharp increase at around 40%, which is good because we really don't expect to see values far away from that value.
+As expected, we see a sharp increase at around 400, which is good because we really don't expect to see values too far away from that value.
 
-Let's take a different view and ask about the distribution of *error*. When we draw a sample, how different is it from 40%? This is just taking those numbers up there and sliding the x-axis around, which isn't all that hard. We get to zoom in if we like, hoping to see fine detail around zero.
+Let's take a different view and ask about the distribution of *error*. When we draw a sample, how different is it from 400? This is just taking those numbers up there and sliding the x-axis around, which isn't all that hard. 
 
 ![cdf](https://github.com/frankmcsherry/blog/blob/master/assets/privacy/primer/cdf2.png)
 
-Now let's do the same thing with the Laplace distribution with parameter 10.0. This corresponds to an `epsilon` value of 0.1, which is not such horrible privacy guarantees. To make the point clearer, I've just plotted these samples on top of the plot just above, for the inherent randomness of the sampling process:
+Now let's do the same thing with the Laplace distribution with parameter 10.0. This corresponds to an `epsilon` value of 0.1, which is not such horrible privacy guarantees (pretty good, actually). To make the point clearer, I've just plotted these samples on top of the plot just above, for the inherent randomness of the sampling process:
 
 ![cdf](https://github.com/frankmcsherry/blog/blob/master/assets/privacy/primer/cdf3.png)
 
