correct bug in example code too

--- a/posts/2016-02-06.md
+++ b/posts/2016-02-06.md
@@ -160,9 +160,11 @@ First, let's write something to generate Laplace noise.
 // the ln of a (0, 1] random number, then choosing a random sign.
 fn laplace(scale: f64) -> f64 {
 	let mut rng = rand::thread_rng();
-	scale * (1.0 - rng.next_f64().ln()) * if rng.gen() { 1.0 } else { -1.0 }
+	scale * (1.0 - rng.next_f64()).ln() * if rng.gen() { 1.0 } else { -1.0 }
 }
 ```
+
+Let me put on "serious face" for a moment and say: "this code is for demonstration purposes only". Ilya Mironov had [some good points](http://dl.acm.org/citation.cfm?id=2382264) about how generating noise too casually doesn't really fill in all the bit patterns you need to fill in, and computers are pretty good at look at low order bits, even if humans are not so good at seeing them when we plot things. Use fixed-precision arithmetic, and generate Laplace random variables using independent Bernoulli variables for each bit.
 
 Now let's write a helper routine to make taking noisy sums easy!
 
