--- a/posts/2016-03-27.md
+++ b/posts/2016-03-27.md
@@ -45,13 +45,13 @@ Differential dataflow computations can be viewed as directed dataflow computatio
 
 Each differential dataflow collection is defined *only* by its inputs, which is an important part of explaining the collection.
 
->> A collection is explained by the collections that are its dataflow inputs.
+> A collection is explained by the collections that are its dataflow inputs.
 
 This isn't very helpful yet, because we have identified entire collections as useful for explaining outputs. Fortunately, most big data computations (and differential dataflow specifically) use *data-parallel* operators: each collection is not an arbitrary function of its inputs, but rather the result of partitioning the elements of its input collections, and applying a function to each part. For example, to determine the minimum label a graph node receives, we could partition the proposed labels by "proposee"; at this point, each part yields only the smallest label, independent of what the other parts do.
 
 Data-parallelism is part of what makes differential dataflow go fast, but it is also very helpful for producing concise explanations; it can dramatically reduce the number of input records relevant to any output record.
 
->> A collection element is explained by the input collection elements in the part that would produce it.
+> A collection element is explained by the input collection elements in the part that would produce it.
 
 ### Dataflow structure
 
