--- a/posts/2016-03-27.md
+++ b/posts/2016-03-27.md
@@ -1,29 +1,33 @@
 
-Today we are going to look at something that I think is pretty amazing. I've wanted to do this for a while, and while at ETH Zürich I found the time and collaborators (John Liagouris and Zaheer Chothia) to make it happen.
+Today we are going to look at something that I think is pretty amazing. I've wanted to do this for a while, and while at ETH Zürich I found the time and collaborators ([John Liagouris](http://people.inf.ethz.ch/ioannisl/) and [Zaheer Chothia](https://people.inf.ethz.ch/zchothia/)) to make it happen.
 
-We are probably all familiar with "big data": for some reason you have been gifted with a pile of data so large that you couldn't hope to do anything with it other than download some scalable system, describe some thoughtful computation, and press "GO". There are many flavors of these computations, and the one we'll be working with is "high-throughput", "low-latency", and allows you to write nice iterative computations: differential dataflow. But really, what we are about to do isn't system dependent: you should be able to do this with any sufficiently powerful system; we'll just use a specific one.
+We are probably all familiar with "big data": for some reason you have been gifted with a pile of data so large that you couldn't hope to do anything with it other than download some scalable system, describe some thoughtful computation, and press "GO". Of course, there are many flavors of these computations, and the one we'll be working with is "high-throughput", "low-latency", and allows you to write nice iterative computations: [differential dataflow](https://github.com/frankmcsherry/differential-dataflow). But really, what we are about to do isn't system dependent: you should be able to do this with any sufficiently powerful system; we'll just use a specific sufficiently powerful one.
 
-So you went and wrote a big data computation, you pressed "GO", and depending on your system you are now either waiting, or perhaps watching a stream of results. Look at all those answers coming out! How did they get there? Imagine picking up any one output and asking "why this result, and not another?". Your social network analysis tells you who can reach whom, but how can you explain the result as anything other than "a computation applied to a terabyte of data"?
+So. You went and wrote a big data computation, you pressed "GO", and depending on your system you are now either waiting, or perhaps watching a stream of results. Look at all those answers coming out! How did they get there? Imagine picking up any one output and asking "why this result, and not another?". Your social network analysis tells you who can reach whom, but how can you explain the result as anything other than "my computation applied to a terabyte of data"?
 
 We're going to look today at the problem of *explaining outputs*. For all of the exciting and meaningful results you computed, how can individual result elements be explained in terms of inputs to the computation? What does that even mean?
 
+We have a [tech report](http://e-collection.library.ethz.ch/view/eth:48721) online, in case you are the sort of person who prefers that type of reading. It has more details and fewer flip comments.
+
 ### Explaining reachability
 
-Let's take a simple example from above: determining the connected components of a social graph like the Twitter @mention relationship. 
+Let's take a simple example from above: determining the connected components of a social graph like the Twitter @mention relationship. Maybe once we have computed the results we need to explain some things. Maybe we want to know how to get two connected people in touch, or explain why you are so well connected to Justin Bieber, or debug a logical inconsistency in the data (e.g. "there should be no path from A to B; what's up?").
 
-We've seen before how to perform such a computation: individuals propose labels to their neighbors, and each remembers (and proposes) the smallest label it has ever seen. In the fullness of time, any two people who can reach each other will eventually have the same label. The results of this computation are pairs `(person, label)`, where two people with the same label can reach one another.
+We've [seen before](https://github.com/frankmcsherry/blog/blob/master/posts/2015-05-12.md#graph-connectivity) how to perform a reachability computation: individuals propose labels to their neighbors, and each remembers (and re-proposes) the smallest label it has ever seen. In the fullness of time, any two people who can reach each other will eventually have the same label. The results of this computation are pairs `(person, label)`, where two people with the same label can reach one another.
 
-Imagine we run the computation and see an output `(frank, label)`. You might want to know why; what part of the input leads the computation to produce this particular result? 
+Imagine we run the computation and see among our outputs `(frank, label)`. You might want to know why; what part of the input leads the computation to produce this particular result? How did I get that label?
 
-If you are familiar with the algorithm, there is a fairly simple answer: the sequence of graph edges the label traverses explain how it went from `label` to `frank`. This sequence of edges is just a path in the graph, and is a great explanation for why we see this result: the output is concise, and it has the property that if we re-run the computation on just this input (the path) we get `(frank, label)` in the output.
+If you are familiar with the algorithm, there is a fairly simple answer: `label` traverses a sequence of graph edges to get to `frank`. This sequence of edges is just a path in the graph, and is a great explanation for why we see this result: the output is concise, and it has the property that if we re-run the computation on just this input (the path) we get `(frank, label)` in the output.
 
-### Explaining other things
+What luck that explanations work out so well for reachability, right! 
 
-What luck that explanations worked out so well for reachability! But there are other computations out there, right?
+I mean, we still have to write a weird system for finding paths in the graph, and do more bespoke work if you ever want to change your query (e.g. maybe you decide wait for a second copy of the label, making the explanations be "two paths", or something weird like that). But at least we understand what an explanation kinda looks like, right?
 
-What we will work through today is a framework for explaining any differential dataflow computation, using differential dataflow itself. This means that we'll end up with computations that can be interactively interrogated to get output explanations, and these explanations update in realtime as the explanatory inputs change. If the paths from `label` to `frank` change, we will observe the stream of these changes (and if the label for `frank` changes, we will see the paths swing to the new label).
+### Explaining all the things
 
-So we automatically get interactive explanations for arbitrary outputs of any computation, in realtime. What isn't to like? There are some overheads, and we will see these, but I'm glad to have your attention.
+What we will work through today is a framework for explaining the outputs of *any* differential dataflow computation, using differential dataflow itself. This means that we'll end up with computations that can be interactively interrogated to get output explanations, and these explanations update in realtime as the explanatory inputs change. If the paths from `label` to `frank` change, we will observe the stream of these changes (and if the label for `frank` changes, we will see the paths swing to connect to the new label).
+
+So we automatically get interactive explanations for arbitrary outputs of any computation, in realtime. What isn't to like? Well, there are some overheads, and we will see these, but I'm glad to have your attention.
 
 ## Explanations
 
