--- a/posts/2016-03-27.md
+++ b/posts/2016-03-27.md
@@ -19,6 +19,10 @@ Imagine we run the computation and see among our outputs `(frank, label)`. You m
 
 If you are familiar with the algorithm, there is a fairly simple answer: `label` traverses a sequence of graph edges to get to `frank`. This sequence of edges is just a path in the graph, and is a great explanation for why we see this result: the output is concise, and it has the property that if we re-run the computation on just this input (the path) we get `(frank, label)` in the output.
 
+Consider the following two ways of looking at your data: with all the data, and with only input elements that explain the output:
+
+![example](https://github.com/frankmcsherry/blog/blob/master/assets/provenance/example.png)
+
 What luck that explanations work out so well for reachability, right! 
 
 I mean, we still have to write a weird system for finding paths in the graph, and do more bespoke work if you ever want to change your query (e.g. maybe you decide wait for a second copy of the label, making the explanations be "two paths", or something weird like that). But at least we understand what an explanation kinda looks like, right?
