--- a/posts/2016-03-27.md
+++ b/posts/2016-03-27.md
@@ -23,9 +23,9 @@ Consider the following two ways of looking at your data: with all the data, and 
 
 ![example](https://github.com/frankmcsherry/blog/blob/master/assets/provenance/example.png)
 
-What luck that explanations work out so well for reachability, right! 
+Explanations look like they might be pretty handy for reachability, right?
 
-I mean, we still have to write a weird system for finding paths in the graph, and do more bespoke work if you ever want to change your query (e.g. maybe you decide wait for a second copy of the label, making the explanations be "two paths", or something weird like that). But at least we understand what an explanation kinda looks like, right?
+I mean, we would still have to write a weird system for finding paths in the graph, and do more bespoke work if you ever want to change your query (e.g. maybe you decide wait for a second copy of the label, making the explanations be "two paths", or something weird like that). But at least we understand what an explanation kinda looks like, right?
 
 ### Explaining all the things
 
@@ -35,19 +35,25 @@ So we automatically get interactive explanations for arbitrary outputs of any co
 
 ## Explanations
 
-Before going too far, let's specify the problem we would like to solve. Imagine we have an input collection, a computation, and a corresponding output collection. For any subset of the output domain, we want to identify a subset of the input collection whose output under the computation agrees with the actual output, on the specified subset. This was a bit wordy, because we want to be able to explain not only output records, but the *absence* of output records. For some set of records that may or may not exist, we want a subset of the input that faithfully reproduces what actually happened. Even if this means *preventing* some records from being produced.
+Before going too far, let's specify the problem we would like to solve. Imagine we have an input collection, a computation, and a corresponding output collection. For any subset of the output domain, we want to identify a subset of the input collection whose output under the computation agrees with the actual output, on the specified subset. This was a bit wordy, because we want to be able to explain not only output records, but the *absence* of output records. For some set of records that may or may not exist, we want a subset of the input that faithfully reproduces what actually happened for those records. Even if this means *preventing* some records from being produced.
 
-We know there is at least one solution to this problem: the entire input collection itself reproduces the entire output collection. However, we are interested in more concise explanations, and will work towards minimizing the amount of input we actually need. This is one place where differential dataflow helps out a great deal: naïve adaptations of existing work can result in enormous explanations. Even differential dataflow can provide large explanations, and we will need to introduce some "optimizations" to streamline the explanations. For example, although we might write a `min` operator as an instance of `group`, explanations for `min` (just the minimum element) can be much simpler than explanations for `group` (the entire input). We won't be proving that we are able to find *optimal* explanations in terms of size, but we'll keep an eye on the size of the explanations as a proxy for how helpful they are (smaller explanations being more helpful, all else being equal).
+We know there is at least one solution to this problem: the entire input collection itself reproduces the entire output collection. However, we are interested in more concise explanations, and will work towards minimizing the amount of input we actually need. This is one place where differential dataflow helps out a great deal: naïve adaptations of existing work can result in enormous explanations. Even differential dataflow can provide large explanations, and we will need to introduce some "optimizations" to streamline the explanations. For example, we may just want *one* path between two nodes, rather than all paths, or ever "all shortest paths".
 
 We promised interactive updates to explanations for interactively update computations, so let's clear that up now. 
 
-Recall that differential dataflow updates computations. We will produce explanations in the spirit above, using differential dataflow. As such, that computation (the explanation computation) will interactively update as well. At each moment in time, we will have computed an explanation for the current snapshot of the data, where the stream of updates to the explanations move us from one correct answer to the next, as the input changes.
+Recall that differential dataflow updates computations. We will produce explanations in the spirit above, using differential dataflow. As such, that computation (the explanation computation) will interactively update as well. At each moment in time, we will have computed an explanation for the current snapshot of the data, where the stream of updates to the explanations move us from one correct answer (explanation) to the next, tracking the changes to the input.
 
 ## Differential dataflow
 
 Let's do a quick recap of what differential dataflow is, because this will play an important role in understanding how it plays a role in explaning things. We could just start with the idea that it is good at doing big-data like computations, and that it quickly updates computations. This is a great start, but we'll want to dig a bit deeper to really grok what is going on.
 
-Differential dataflow computations can be viewed as directed dataflow computations: each vertex in the dataflow graph names a collection, and directed edges from one vertex to another indicate that the source is used in the definition of the target. This has several important consequences:
+Differential dataflow computations can be viewed as directed dataflow computations: each vertex in the dataflow graph names a collection, and directed edges from one vertex to another indicate that the source is used in the definition of the target. 
+
+For example, here is a picture:
+
+![dataflow](https://github.com/frankmcsherry/blog/blob/master/assets/provenance/dataflow.png)
+
+This structure has several important consequences:
 
 ### Functional operators
 
@@ -55,9 +61,11 @@ Each differential dataflow collection is defined *only* by its inputs, which is 
 
 > A collection is explained by the collections that are its dataflow inputs.
 
-This isn't very helpful yet, because we have identified entire collections as useful for explaining outputs. Fortunately, most big data computations (and differential dataflow specifically) use *data-parallel* operators: each collection is not an arbitrary function of its inputs, but rather the result of partitioning the elements of its input collections, and applying a function to each part. For example, to determine the minimum label a graph node receives, we could partition the proposed labels by "proposee"; at this point, each part yields only the smallest label, independent of what the other parts do.
+This isn't very helpful yet, because we have identified entire collections as useful for explaining outputs. If we just report that you pretty much need all the data, you wouldn't be too impressed.
 
-Data-parallelism is part of what makes differential dataflow go fast, but it is also very helpful for producing concise explanations; it can dramatically reduce the number of input records relevant to any output record.
+Fortunately, most big data computations (and differential dataflow specifically) use *data-parallel* operators: each collection is not an arbitrary function of its inputs, but rather the result of partitioning the elements of its input collections, and applying a function to each part. For example, when we determine the minimum label a graph node receives, we partition the proposed labels by "proposee"; at this point, each part yields only the smallest label, independent of what the other parts do.
+
+This independence is part of what makes differential dataflow go fast: we know that changes only affect one part, and can minimize the amount of recomputation we do when a change arrives. For exactly the same reason, indepedence helps us provide concise explanations: we know that only so many records played a role in determining some output.
 
 > A collection element is explained by the input collection elements in the part that would produce it.
 
