--- a/posts/2016-03-27.md
+++ b/posts/2016-03-27.md
@@ -49,7 +49,7 @@ Let's do a quick recap of what differential dataflow is, because this will play 
 
 Differential dataflow computations can be viewed as directed dataflow computations: each vertex in the dataflow graph names a collection, and directed edges from one vertex to another indicate that the source is used in the definition of the target. 
 
-For example, here is a picture:
+For example, here is a picture (it is for breadth-first search, but the graph structure is basically the same for label propagation):
 
 ![dataflow](https://github.com/frankmcsherry/blog/blob/master/assets/provenance/dataflow.png)
 
@@ -68,6 +68,8 @@ Fortunately, most big data computations (and differential dataflow specifically)
 This independence is part of what makes differential dataflow go fast: we know that changes only affect one part, and can minimize the amount of recomputation we do when a change arrives. For exactly the same reason, indepedence helps us provide concise explanations: we know that only so many records played a role in determining some output.
 
 > A collection element is explained by the input collection elements in the part that would produce it.
+
+This is now a bit more helpful. If we need to explain some records in the output of an operator, we just need to look up the inputs to the corresponding parts. They do a good job explaining the output.
 
 ### Dataflow structure
 
