--- a/posts/2016-03-27.md
+++ b/posts/2016-03-27.md
@@ -75,6 +75,8 @@ This is now a bit more helpful. If we need to explain some records in the output
 
 While each operator can name input records required to explain output records, the dataflow graph shows us how to find explanations for these input records: they were output records of some other vertex in the dataflow graph, or perhaps they are inputs to the computation itself. In either case, we can chase backwards through the dataflow graph, expanding the set of tuples of which we require explanations, until we have some subset of the input records and no additional internal records to explain.
 
+Looking back at the picture up above; if we had to explain the outputs of `group`, we would push them back to `concat`, which would probably require explanations from `map`, etc. 
+
 There is the sneaky issue that differential dataflow allows loops, which means we might have to chase these dependencies for a while. This is true, but we'll use differential dataflow's timestamps (in the next section) to make sure that we only chase *causal* dependencies: records that could actually play a role in the production of outputs. 
 
 ### Logical timestamps
@@ -86,17 +88,21 @@ Differential dataflow transcribes evolving collections as an append-only log of 
     (r3, +1, 0)
     (r1, -1, 7)
 
-where the shape of these tuples is `(record, change, time)`: the record has some change to the number of times it occurs in the collection, where the changes occur at some logical time. Here we've had the first three changes take effect immediately (at time `0`), with the removal of `r1` at time `7`, which I just made up to be arbitrary.
+where the shape of these tuples is `(record, change, time)`: the record has some change to the number of times it occurs in the collection, where the changes occur at some logical time. Here we've had the first three changes take effect immediately (at time `0`), with the removal of `r1` at time `7`, which I just made up arbitrarily.
 
 Each differential dataflow operator maps whatever collection logic it has across all of the times at which its inputs change. For the example above, it could produce output changes at times `0` and `7`. Importantly, the computation for time `0` ignores the input changes for time `7` (or other times greater than `0`); consequently, they will not play a role in explaining such outputs.
 
-The important feature here is the timestamp: when we explain records in a differential dataflow computation, we will ask for explanations *at a specific timestamp*. For example, if we want to know about `r1`, we need to clearly indicate whether we want it explained at time `0`, when the record still exists, or at time `7`, when it no longer exists. In the first case, we can ignore the `(r1, -1, 7)` tuple; it doesn't explain the output, and we don't need to have it explained. This allows us to break "explanation loops" that might otherwise exist in chasing records around a cyclic dataflow graph: here we guarantee that the explanatory timestamps only decrease as we chase them through the dataflow graph.
+The important feature here is the timestamp: when we explain records in a differential dataflow computation, we will ask for explanations *at a specific timestamp*. For example, if we want to know about `r1`, we need to clearly indicate whether we want it explained at time `0`, when the record still exists, or at time `7`, when it no longer exists. In the first case, we can ignore the `(r1, -1, 7)` tuple; it doesn't explain the output, and we don't need to have it explained. In the second case, we totally need that subtraction, because without it we wouldn't produce the right answer (and you wouldn't be impressed with the explanation). 
+
+Timestamps also allow us to break "explanation loops" that might otherwise exist in chasing records around a cyclic dataflow graph: here we guarantee that the explanatory timestamps only decrease as we chase them through the dataflow graph.
 
 ## Mocking up explanations
 
 We are going to start with a very simple approach: for each differential dataflow operator, we'll make a second, new operator with the same behavior, but additional inputs and outputs. For each output of the original operator, we'll add a new "explain me" input: this input sees a collection of operator outputs that should be explained. For each input of the original operator, we'll add a new "explanation" output: this output produces the subset of the corresponding input needed to explain the requested outputs. Because the figures work this way, we'll add the suffix `_q` to these new "query" collections.
 
 We'll then wire up our new operators in a reflection of the original dataflow graph: wherever there is an edge from `op1` to `op2`, we will add an edge in the reverse direction, from `op2_q` back to `op1_q`. This will turn explanation requests made of `op2` into explanation requests for `op1`, which in turn can pass requests back to its input operators. For timely dataflow nerds, these new operators will live in a second scope, parallel to the original. This indicates to timely that information only flows in one direction, from our computation to the explanation infrastructure, and not back; this prevents explanation work from blocking actual computation.
+
+![reflected](https://github.com/frankmcsherry/blog/blob/master/assets/provenance/reflected.png)
 
 This simple approach should make our approach clear (I hope), but we'll want to move on to some smarter versions to streamline the computation. We will do that just afterwards, so if it all seems hopelessly naïve don't worry (at least, not yet). We'll also need to add a bit more complexity to deal with a big secret I haven't mentioned yet.
 
