--- a/posts/2016-03-27.md
+++ b/posts/2016-03-27.md
@@ -23,9 +23,11 @@ Consider the following two ways of looking at your data: with all the data, and 
 
 ![example](https://github.com/frankmcsherry/blog/blob/master/assets/provenance/example.png)
 
-Explanations look like they might be pretty handy for reachability, right?
+Explanations look like they might be pretty handy for reachability, right? 
 
 I mean, we would still have to write a weird system for finding paths in the graph, and do more bespoke work if you ever want to change your query (e.g. maybe you decide wait for a second copy of the label, making the explanations be "two paths", or something weird like that). But at least we understand what an explanation kinda looks like, right?
+
+By the end of the post we'll see how to do the above agaist constantly updating billion edge graphs with millisecond latencies, without writing any new system (or even much/any new code, in principle).
 
 ### Explaining all the things
 
@@ -100,11 +102,15 @@ Timestamps also allow us to break "explanation loops" that might otherwise exist
 
 We are going to start with a very simple approach: for each differential dataflow operator, we'll make a second, new operator with the same behavior, but additional inputs and outputs. For each output of the original operator, we'll add a new "explain me" input: this input sees a collection of operator outputs that should be explained. For each input of the original operator, we'll add a new "explanation" output: this output produces the subset of the corresponding input needed to explain the requested outputs. Because the figures work this way, we'll add the suffix `_q` to these new "query" collections.
 
-We'll then wire up our new operators in a reflection of the original dataflow graph: wherever there is an edge from `op1` to `op2`, we will add an edge in the reverse direction, from `op2_q` back to `op1_q`. This will turn explanation requests made of `op2` into explanation requests for `op1`, which in turn can pass requests back to its input operators. For timely dataflow nerds, these new operators will live in a second scope, parallel to the original. This indicates to timely that information only flows in one direction, from our computation to the explanation infrastructure, and not back; this prevents explanation work from blocking actual computation.
+We'll then wire up our new operators in a reflection of the original dataflow graph: wherever there is an edge from `op1` to `op2`, we will add an edge in the reverse direction, from `op2_q` back to `op1_q`. This will turn explanation requests made of `op2` into explanation requests for `op1`, which in turn can pass requests back to its input operators. 
+
+Here is a schematic picture, which isn't particularly accurate. :)
 
 ![reflected](https://github.com/frankmcsherry/blog/blob/master/assets/provenance/reflected.png)
 
-This simple approach should make our approach clear (I hope), but we'll want to move on to some smarter versions to streamline the computation. We will do that just afterwards, so if it all seems hopelessly naïve don't worry (at least, not yet). We'll also need to add a bit more complexity to deal with a big secret I haven't mentioned yet.
+For timely dataflow nerds, these new operators will live in a second scope, parallel to the original. This indicates to timely that information only flows in one direction, from our computation to the explanation infrastructure, and not back; this prevents explanation work from blocking actual computation. What isn't shown in the picture is the flow of information from the first scope to the second; we'll want the *actual computation* to inform the explanations, and that isn't happening yet.
+
+We will start with simple, general versions of operator explanations, which should make our approach clear (I hope), but we'll want to move on to some smarter versions to streamline the computation. We will do that just afterwards, so if it all seems hopelessly naïve don't worry (at least, not yet). We'll also need to add a bit more complexity to deal with the big secret I haven't mentioned yet.
 
 ### A simple approach (`group`)
 
@@ -112,17 +118,15 @@ The simplest sort of operator in differential dataflow is the `group` operator, 
 
 We are going to make our lives a little easier here, and require that the outputs from `group` have the form `(key, val)`; that is, they explicitly record the key used to produce the record. We could work around this by keeping a bit more information on the side, but we'll see that most of use cases do this, and it is basically free to "discard" the key if we actually want to. 
 
-So we have input records that look like `(key, val)` and output records that look like `(key, val)`, and for any requested output records we want to find the input records with the same key (because those are exactly the inputs that produced the output). It kind of looks like we want a `join` between the actual input and the requested output. Let's do that.
+Let's try to implement `group_q`: we have records input to `group` that look like `(key, val)` and output records that look like `(key, val)`. For any requested output records (inputs to `group_q`) we want to find the `group` input records with the same key (because those are exactly the inputs that produced the output). It kind of looks like we want a `join` between the actual input and the requested output. Let's do that.
 
 ![group](https://github.com/frankmcsherry/blog/blob/master/assets/provenance/group.png)
 
-This is a really simple way to fish out the relevant inputs for any given outputs. At least, it is a simple way to describe it; what are the overheads involved?
+The `group` operator on top is what we see on the left side of the picture above. The `join` below it just gets called `group_q`, because it's all we need to fish out the relevant inputs for any given outputs. 
 
-A `join` in differential dataflow is roughly like a hash-join: each input is kept indexed by its key, and when records (changes to records) arrive on either input they are matched against existing records on the other input. In our case, the input collection will be maintained indexed by key, and as new requests arrive they result in one look-up, and the emission of input records with the same key.
+This is a simple way to determine the inputs; what are the overheads involved? A `join` in differential dataflow is roughly like a hash-join: each input is kept indexed by its key, and when records (changes to records) arrive on either input they are matched against existing records on the other input. In our case, the input collection will be maintained indexed by key, and as new requests arrive they result in one look-up, and the emission of input records with the same key.
 
-This approach maintains a second copy of the input data, indexed by key. That can be a fair amount of space. At run-time, lookups for explanations are relatively cheap; the work done is proportional to the amount of explanations required, which is probably as good as it gets.
-
-If we wanted to be smarter, we could try and re-use the index `group` itself uses (it indexes the same input data, and in the same way). You can actually do this in differential today, though this is a new feature and we didn't use it when we did the work.
+This approach maintains a second copy of the input data, indexed by key. That can be a fair amount of space. At run-time, lookups for explanations are relatively cheap; the work done is proportional to the amount of explanations required, which is probably as good as it gets. As it turns out, the data are indexed by the `join` the same way `group` indexes them, and we could try and share this data. There are some logistic issues at the moment (the data have different timestamp types), but in theory is it possible.
 
 ### A simple approach (`map`)
 
