--- a/posts/2016-03-27.md
+++ b/posts/2016-03-27.md
@@ -134,7 +134,7 @@ The other operator we need to get a primitive MapReduce computation up is `map`,
 
 ![map](https://github.com/frankmcsherry/blog/blob/master/assets/provenance/map.png)
 
-The `join` here is like the one for `group`, but there are probably a lot more keys here. Plus, we expected to do a fair bit of work when we wrote `group`, but we probably thought `map` would be cheap. We'll fix this up in some special cases in the smarter variants.
+The `join` here is like the one for `group_q`, but there are probably a lot more keys here. Plus, we expected to do a fair bit of work when we wrote `group`, but we probably thought `map` would be cheap. We'll fix this up in some special cases in the smarter variants.
 
 ### Smarter approaches
 
@@ -154,7 +154,7 @@ The `join` operator takes two collections `(key, val1)` and `(key, val2)` and pr
 
 ![join](https://github.com/frankmcsherry/blog/blob/master/assets/provenance/join.png)
 
-No additional state needs to be retained for `join` operators. At runtime, each explanation request just turns into one explanation request for each of the inputs to the join.
+No additional state needs to be retained for `join` operators. At runtime, each explanation request just turns into one explanation request for each of the inputs to the join. This is a neat example where a painful operator (`join`) turns into very simple explanation infrastructure, sort of the dual to `map`.
 
 #### The `topk` operator
 
@@ -162,7 +162,7 @@ The `group` operator is a general-purpose aggregator, but often we know there is
 
 For example, label propagation repeatedly circulates label proposals, with each participant retaining only the smallest label. We would usually write this with a `group` operator, because we want to bring together all the proposals destined for one participant. We know that we only plan to keep the smallest label, but as long as this remains our secret any general-purpose explanation infrastructure will only know to ask for explanations of all of a parts input. 
 
-Instead, if we make clear that we are using a special form of `group`, we should be able to ask for the smallest record (or records) as the explanation. These records explains what actually happens, as all other records are simply discarded. To make this work correctly, we need to join any requests `(key, val)` with the actual top records, because it may differ from the request; recall that we want to explain absences as well as actual records (why was that again? keep reading!).
+Instead, if we make clear that we are using a special form of `group`, we should be able to ask for the smallest record (or records) as the explanation. These records explains what actually happens, as all other records are simply discarded. To make this work correctly, we need to join any requests `(key, val)` with the actual top few records, produced as output. This join is important because the actual answer may differ from our request; recall that we want to explain absences as well as actual records (why was that again? keep reading!).
 
 ![topk](https://github.com/frankmcsherry/blog/blob/master/assets/provenance/topk.png)
 
@@ -172,7 +172,9 @@ The overhead of `topk` is like that of `group`, except that we index the output 
 
 When we write a differential dataflow program, we also assemble a shadow copy of the dataflow graph, one that draws in various collections produced by the real computation, as well as requests for explanations of its output records. This shadow dataflow graph circulates explanation requests until all have resolved requests made of the input collections themselves. These inputs are then the explanations for the outputs. 
 
-This sounds great, and we are going to look at how well it works on the graph connectivity problem. Then we will talk a bit about how it doesn't actually work as promised, we'll fix it, and then we'll move to a more awesome problem (stable matching).
+Both of these dataflow graphs are running at the same time, both continually updating in response to changes in the inputs (data, and requested explanations).
+
+This sounds great, and we are going to look at how well it works on the graph connectivity problem. Then we will talk a bit about how it doesn't actually work as promised for general computation, we'll fix it, and then we'll move to a more awesome problem (stable matching).
 
 ## Explaining reachability
 
@@ -184,15 +186,15 @@ There aren't a lot of techniques for automatically explaining iterative computat
 
 #### Spark-style provenance
 
-If you think of our iterative computations as repeated batch computation, you could apply some existing work on data provenance to determine, for each iteration, which input tuples play a role in producing each output tuple. The reasoning we did for `group` isn't new, and you can just apply it on an operator by operator basis.
+If you think of our iterative computations as repeated batch computation, you could apply some [recent work on data provenance](http://www.vldb.org/pvldb/vol9/p216-interlandi.pdf) to determine, for each iteration, which input tuples play a role in producing each output tuple. The reasoning we did for `group` isn't new, and you can just apply it on an operator by operator basis.
 
-If you try this, you pretty quickly run aground on a few issues. First, Spark isn't great at iterative computations in the first place, even without explaining its outputs. Second, and more importantly, in each iteration the labels for each node get updated based on new proposals and old values. Nothing in the computation reveals that "staying put" doesn't require an explanation. If a label hasn't changed, don't bother tracking down the explanations for all those pointless proposals, right? If you require explanations for these pointless proposals, you are going to bring in the edges the traversed, transitively, which ends up being all the edges in the connected component.
+If you try this, you pretty quickly run aground on a few issues. First, Spark isn't great at iterative computations in the first place, even without explaining its outputs. Second, and more importantly, in each iteration the labels for each node get updated based on new proposals and old values. Nothing in the computation reveals that "staying put" doesn't require an explanation. If a label hasn't changed, don't bother tracking down the explanations for all those pointless proposals, right? Unfortunately, if you require explanations for these pointless proposals, you are going to bring in the edges the traversed, transitively, which ends up being all the edges in the connected component. Accurate, but not yet helpful.
 
-The computational model doesn't reveal the relation between successive iterates, which is what lets differential dataflow determine it only needs explanations for times less or equal to those of requests.
+The Spark-style computational model doesn't reveal the relation between successive iterates, which is what lets differential dataflow determine it only needs explanations for times less or equal to those of requests, and to stop asking questions about records when nothing changes.
 
 #### Datalog-style provenance
 
-Another approach is to invoke provenance work done in the datalog community. If you aren't familiar with datalog, think of it as a version of SQL with recursion and a less shouty syntax. The language inherently supports recursion and joins, which is great for label propagation, but it doesn't natively support aggregations like `min`/`topk`. Also, for good reasons, the explanations produced in these systems include *all* explanations, corresponding to all paths from `label` to `frank` in our example from way above. 
+Another approach is to invoke [provenance work done in the datalog community](https://yanniss.github.io/DeclarativeDebugging.pdf). If you aren't familiar with datalog, think of it as a version of SQL with recursion and a less shouty syntax. The language inherently supports recursion and joins, which is great for label propagation, but it doesn't natively support aggregations like `min` or `topk`. Also, for good reasons, the explanations produced in these systems include *all* explanations, corresponding to all paths from `label` to `frank` in our example from way above. 
 
 This isn't as bad as the Spark-style "literally every path anywhere" explanations, but in a connected graph you are still going to get all the edges in your connected component. You'll produce fewer intermediate requests though, so yay.
 
@@ -200,25 +202,25 @@ Both of these approach end up asking for pretty much all the edges in the graph.
 
 ### Simple differential approach
 
-We'll start with a simple differential dataflow approach, based on a direct port of the connected component code in the differential dataflow repository. This code uses a `group` to collect the labels each iteration. The differential computation does reveal that it is the same collection changing each iteration, which allows differential to isolate the first time a label (e.g. `(frank, label)`) appears, and stop talking about it afterwards. On the other hand, this simple version isn't bright enough to use the `topk` instead of `group`, and that has some performance issues we will check out.
+We'll start with a simple differential dataflow approach, based on a direct port of the [connected component code](https://github.com/frankmcsherry/differential-dataflow/blob/master/examples/cc.rs) in the differential dataflow repository. This code uses a `group` to collect the labels each iteration. The differential computation does reveal that it is the same collection changing each iteration, which allows differential to isolate the first time a label (e.g. `(frank, label)`) appears, explain the appearance, and then stop talking about it afterwards. On the other hand, this simple version isn't bright enough to use the `topk` instead of `group`, and that has some performance issues we will check out.
 
 Our plan is to load up the Twitter data, as a batch computation but with the potential to update the edges if we like, and then start asking for explanations of random observed outputs. We'll get our answers, but the amount of time taken for the responses may (will) vary. Let's look at that.
 
 ![times](https://github.com/frankmcsherry/blog/blob/master/assets/provenance/cc-nomin-twitter-latency.png)
 
-Ok, let's explain this figure. We did this measurement 1,000 times, recording the time taken for each, and we are plotting the distribution of these 1,000 measurements in this figure. Basically, we sort the values and plot them, and that gives the empirical complementary cumulative density function, or something.
+Ok, let's explain this figure. We did this experiment 1,000 times, recording the amount of time taken for to explain random outputs, and we are plotting the distribution of these 1,000 measurements in this figure. Basically, we sort the values and plot them, and that gives the empirical complementary cumulative density function, or something like that.
 
-What the figure tells us is that we most take at least one second, and we get as large as one thousand seconds (though not so often). That doesn't sound brilliant, does it?
+What the figure tells us is that we most take at least one second, and we get as large as one thousand seconds (though not so often). That doesn't sound brilliant, does it? You were promised more!
 
-The explanation lies in the next figure, in which we plot the time taken against the *size* of the explanation:
+The explanation lies in the next figure, in which we plot the time taken against the *size* of the explanation: the number of input edges produced.
 
 ![sizes](https://github.com/frankmcsherry/blog/blob/master/assets/provenance/cc-nomin-twitter-times-changes.png)
 
 This is just a scatterplot, but it shows us that there is a pretty serious correlation between the amount of time taken and the size of the explanation. And, wtf why are the explanations so big so often? Some are nearly one million edges. That sounds wrong, right?
 
-The problem here is that `group` is just pulling in all contributions to each computation. This is actually pretty decent, in that if you get label `0` in round 5, `group` is smart enough to only ask for inputs in round `4`, and then round `3` etc. Because the differential dataflow label propagation is smart (it propagates small labels first), this actually means that we are producing edges corresponding to shortest paths from, e.g. `label` to `frank`. 
+The problem here is that `group` is just pulling in all contributions to each computation. This isn't as bad as it sounds, in that if you get label `0` in round 5, `group` is smart enough to only ask for inputs in round `4`, and then round `3` etc. Because the differential dataflow label propagation is smart (it propagates small labels first), this actually means that we are producing edges corresponding to shortest paths from, e.g. `label` to `frank`. 
 
-The problem is that there can be lots of these shortest paths. Many nodes have large numbers (hundreds of thousands) of paths of the same short length back to the node that produced their label. The `group` operator keeps all of them, because ... well.
+The problem is that there can be lots of these shortest paths. Many nodes have large numbers (hundreds of thousands) of paths of the same short length back to the node that produced their label. The `group` operator keeps all of them, because ... well, you didn't realize this would be a problem either, did you?
 
 So at least part of the problem is that we are producing too much output. Not just that there are 1M records to work with (that doesn't take 1,000 seconds), but all the weird chasing around of data and looking things up, it's just a mess with such casual explanations.
 
@@ -230,13 +232,13 @@ Let's look at the latency plot. We took this one with multiple workers, because.
 
 ![times](https://github.com/frankmcsherry/blog/blob/master/assets/provenance/cc-twitter-true.png)
 
-These numbers look a lot better. We are well below one second, and typically down around 10-100ms, depending on the number of workers we use. The fewer workers the better, right? It makes sense because there is very little parallel work to do here, but the throughput of the actual system would (does) suffer if we don't use multiple workers. The 32 worker numbers look a bit dodgy, in part because this is the number of cores the machine has, and if anything else needs to run the measurements get screwed up.
+These numbers look a lot better. We are well below one second, and typically down around 10-100ms, depending on the number of workers we use. The fewer workers the better, right? It makes sense because there is very little parallel work to do here, but the throughput of the actual system would (does, figure incoming) suffer if we don't use multiple workers. The 32 worker numbers look a bit dodgy, in part because this is the number of cores the machine has, and if anything else needs to run the measurements get screwed up.
 
-We also took some measurements where we update the graph to see how those latencies are affected. 
+We also took some measurements where we update the graph to see how those latencies are affected. In this case we added and removed 10 random edges and measured the time to resolve both the graph connectivity answer and any changes to explanations.
 
 ![updates](https://github.com/frankmcsherry/blog/blob/master/assets/provenance/cc-twitter-update-noprov-10.png)
 
-They basically tell us that updates are still millisecond or less, except for some idiot measurement out in the tail that spiked to 1,000 seconds. No clue there; we think it is start-up, but didn't want to just delete the measurement (again, science).
+They basically tell us that updates are still millisecond or less, except for some idiot measurement out in the tail that spiked to 1,000 seconds. No clue there; we think it is start-up or a glitchy measurement, but didn't want to just delete the data point (again, science).
 
 ### Overheads
 
@@ -244,7 +246,7 @@ What about overheads? Like, how much are we paying extra when we turn on this ex
 
 ![overhead](https://github.com/frankmcsherry/blog/blob/master/assets/provenance/cc-overhead-twitter.png)
 
-There is overhead, and it is non-trivial, but we still end up going faster than other systems. So, "boo overhead" and "yay differential dataflow". Possibly also "boo not giving Myria a fair shot because we don't understand it". Call me.
+There is overhead, and it is non-trivial, but we still end up going faster than other systems. So, "boo overhead" and "yay differential dataflow". Possibly also "boo not giving Myria a fair shot because we don't really understand it". Myria folks, call me if these numbers are surprising. As another data point, GraphX on the same dataset takes about 400 seconds on a 16 node (128 core) cluster, somewhere between our 2- and 4- core numbers, and it neither incrementally updates nor explains anything (except your AWS bill).
 
 The overheads are mostly due to the fact that the reference differential computation is pretty lean. All of the internal indices it uses are keyed by dense unsigned integers, and just use direct indexing into arrays. Some of the explanation operators require indices keyed by pairs, and fall back to a much slower `HashMap` implementation. 
 
@@ -258,25 +260,25 @@ There was something about how it doesn't work, wasn't there?
 
 The label propagation example works just fine. But it is a special case of computation that everyone seems to fixate on, called a *monotonic* computation. If you add more inputs to such a computation, you just get more (or better) outputs. Additional inputs don't *suppress* output records.
 
-It turns out if you are dealing with non-monotonic computations, which means you aren't doing label propagation, you aren't doing SQL or Datalog, and you quite probably aren't using research systems (most of which don't handle non-monotonic operators), the explanations we produce don't necessarily explain the results.
+It turns out if you are dealing with non-monotonic computations, the explanations we produce don't necessarily explain the results. Although we did a great job of finding inputs that played a role in producing your outputs, they may not have the property that if you re-run your computation on them you actually get the output. That would suck, right? But yeah it happens.
 
-Although we did a great job of finding inputs that played a role in producing your outputs, they may not have the property that if you re-run your computation on them you actually get the output. That would suck, right? But it happens.
+In SQL land you don't see this problem because SQL land things are monotonic. Same with Datalog. We think what we are about to do is perhaps the first time folks have derived explanatory input for large-scale non-monotonic computations (but yell at me if this is wrong).
 
 ### Stable matching
 
 To get a sense for what goes wrong, let's look at another cool algorithm that differential dataflow supports: stable matching.
 
-Stable matching is a problem where you have a bipartite graph, so some nodes are blue and some are red, and each node has some preferences for some of the nodes of the other color, which we indicate by an edge with some preference on it (small values are better). The idea is to find a matching, a subset of these edges, so that no blue and red node would prefer to ditch their current assignment and hook-up with each other.
+Stable matching is a problem where you have a bipartite graph, so some nodes are blue and some are red, and each node has some preferences for some of the nodes of the other color, which we indicate by an edge with some preference on it (small values are better). The idea is to find a matching, a subset of these edges, so that no blue and red node would prefer to ditch their current assignment and hook-up with each other instead.
 
 There are a bunch of algorithms for this problem, but there is a really simple one which proceeds in rounds, where each blue node proposes to its most prefered red node that hasn't yet rejected it. Red nodes then look at their proposals and go with whichever is best, walking away from proposals in the last round if they've gotten something better. 
 
-Grumpy people might say this requires a lot of nerve on the part of the blue nodes, and is bad behavior on the part of the red nodes, but you can prove that the process ends up with blue-optimal and red-pessimal assignments, so stfu and put yourself out there.
+Now, grumpy people might say this requires a lot of nerve on the part of the blue nodes, and is bad behavior on the part of the red nodes, but you can prove that the process ends up with blue-optimal and red-pessimal assignments, so stfu and put yourself out there.
 
 Anyhow, let's write the algorithm in differential dataflow, starting from a collection of quadruples
 
     (name_1, pref_1, name_2, pref_2)
 
-The algorithm repeatedly thins out these possible assignments by proposing the best ones, and discarding any that are rejected:
+The algorithm repeatedly thins out these possible assignments by proposing the best ones, and discarding any that are rejected. It does this by re-keying the tuples by `name_i`, putting the corresponding preference first, then calling `topk` with the k value of `1`:
 
     initial.iterate(|active| {
       // key records by a, order by pa.
@@ -293,7 +295,7 @@ The algorithm repeatedly thins out these possible assignments by proposing the b
       active.except(props.except(accpt))
   })
 
-We just do a `topk` to get each of the best blue proposals, followed by another `topk` using a different key (the proposed at). The process terminates when there are no remaining options for unmatched nodes.
+The process terminates when there are no remaining options for unmatched nodes.
 
 ### Explaining matchings
 
@@ -305,46 +307,57 @@ Ok, how did that happen? I had lots of people on my list, and put `mr_scruffles`
 
 The problem here is that no one actually told me to take a hike. There is no positive data for rejection here. The computation knows that if it doesn't receive a response, it should cross off the proposal. This is the right thing to do, but it baffles the explanation infrastructure, which thought that if it got all the input data it would produce the right output. Nope. There are some *absences* that are just as important (specifically, from the `accpt` collection).
 
-Although part of the problem here is that we need to explain the absence of records, we know how to do that (at least, the infrastructure already does that). The bigger problem is that we don't know that we need to explain the absence of a record until we run the computation forward and fail to get the right answer. We can just request an explanation for every absent record, because, well most of them are absent. Like, infinitely many.
+Although part of the problem here is that we need to explain the absence of records, we know how to do that (at least, the infrastructure already does that). The bigger problem is that we don't know that we need to explain the absence of a record until we run the computation forward and fail to get the right answer. We can't just request an explanation for every absent record though, because, well most of them are absent. Like, infinitely many.
 
-So if we just take my preference list and that of `mr_scruffles`, and we run the computation forward, we get the tuples
+If we just took my preference list and that of `mr_scruffles`, the provided explanation, and we run the computation forward, we get the tuples
 
 	(frank, **REDACTED**)
 	(frank's_leg, mr_scruffles)
 
 because these were the top preferences for `frank` and `mr_scruffles`, respectively, and the other involved parties have no better options that we identified. This isn't the right answer, though.
 
-Of course, **REDACTED** had better proposals (perhaps so did `frank's_leg), and those other proposals are an important part of explaining this unfortunate incident.
+Of course, **REDACTED** had better proposals (perhaps so did `frank's_leg`), and those other proposals are an important part of explaining this unfortunate incident. We just need to automatically discover them, as appropriate.
 
 ### Fixing things
 
 There is a relatively simple way to fix things, and amazingly it actually works (in differential). We are going to do a few things, which I will enumerate:
 
-1. We instantiate a second copy of the computation (here: "stable matching") whose input will be the explanation we identify. We use this second copy to try out our explanation and look for issues.
-2. We merge the outputs of these second copies of operators with those of the reference computation, feeding into the explanation infrastructure. If it outputs the same records as in the reference computation, great. If it outputs BS records that don't exist in the reference computation, those records must be explained. They don't exist, so their "explanation" will correct their existence. 
+1. We instantiate a second copy of the computation (here: "stable matching") whose input will be the explanation we identify. We use this second copy to try out our explanation and look for issues. As we fix the issue, we'll update the computation, maybe finding more issues to fix.
+2. We merge the outputs of these second copies of operators with those of the reference computation, feeding into the explanation infrastructure. If this second copy outputs the same records as in the reference computation, great, we have matching output. If it outputs BS records that don't exist in the reference computation, those records must be explained. They don't exist, so their "explanation" will serve to correct their existence. 
 3. This may happen multiple times, so we run this process to fixed point, adding (never removing) records to the explanation until the BS records are cleaned up. 
 
 Yeah, it is a bit crazy having all these additional loops around. It works because math. Math says "you're welcome".
 
-All those numbers you saw up above for reachability were using this weird infrastructure. Differential means it has approximately zero overhead when you don't need it (i.e. no iterations required).
+All those numbers you saw up above for explaining reachability were using this weird infrastructure. Differential means it has approximately zero overhead when you don't need it (i.e. no iterations required).
+
+In the stable matching examples above, we would get 
+
+	(frank, **REDACTED**)
+	(frank's_leg, mr_scruffles)
+
+as tuples that need to be explained. In this case that would mean asking **REDACTED** to explain accepting `(frank, **REDACTED**)` which obviously never happened. This "not happening" is explained by the tuple containing **REDACTED**'s actual choice. Instead, the explanation will come back with the corrected input, which should explain the actual pairing involving **REDACTED**.
+
+This won't immediately fix the problem, as the output might now be the second person on my list, **SERIOUSLY?**. Perhaps **SERIOUSLY?** wasn't interested either, and we'll have to bring in the matched tuple there, too. The process repeats, potentially for many rounds (maybe **SERIOUSLY?** didn't get his or her first choice either; we may need to explain why not).
 
 ### Stable matching experiments
 
-With things fixed, let's start looking at some stable matching numbers. You don't see lots of stable matching in papers, partly because as a non-monotonic computation there are a bunch of cheats you can't do. Asynchronous computation doesn't work as well with non-monotonic logic, and it isn't a super clean "think like a vertex" program. Point being, I don't actually know what good numbers should be, but we will see what they are.
+With things fixed, let's start looking at some stable matching numbers. You don't see lots of stable matching in papers, partly because as a non-monotonic computation there are a bunch of cheats you can't do. Asynchronous computation doesn't work as well with non-monotonic logic, and it isn't a super clean "think like a vertex" program. Point being, I don't actually know what good numbers should be, but we will see what they are in our case.
 
-The Twitter graph ends up being a bit of a pain here. We put random preferences on each edge, but because some nodes have degrees in the millions, we see some stupidly large explanations. To make our lives easier, we threw away vertices with degree greater than 1,000. We didn't do this with the Livejournal dataset, so you can check out those numbers if you are keen.
+The Twitter graph ends up being a bit of a pain here. We put random preferences on each edge, but because some nodes have degrees in the millions, we see some stupidly large explanations. To make our lives easier, we threw away vertices with degree greater than 1,000. That seems like a lot of people to have asked out.
 
-We did a query latency experiment where we picked random outputs from the computation and asked to have them explained.
+We didn't do this with the Livejournal dataset, so you can check out those numbers in the paper if you are keen. They are qualitatively similar.
+
+We did a query latency experiment where we picked random output matchings from the computation and asked to have them explained.
 
 ![times](https://github.com/frankmcsherry/blog/blob/master/assets/provenance/smp-query-twitter-true-0-1000.png)
 
-You can see that some hunk of the examples require just a few milliseconds. I'm guessing these are folks that didn't have lots of choices, and require no iteration to sort out why they got what they got. We do see a tail where some explanations require up to 10s to figure out. 
+You can see that some hunk of the examples require just a few milliseconds. I'm guessing these are folks that didn't have lots of choices, and require no iteration to sort out why they got what they got: limited potential. We do see a tail where some explanations require up to 10s to figure out; they probably have their own reality tv show.
 
-Like with the naïve connected components, much of this comes down to complicated explanations. We know that there are short paths and that this should mean small explanations for reachability, but we really have no good intuition about what explanations for matchings should look like. Here is a scatterplot of the times versus sizes of explanation
+Like with the naïve connected components, much of this comes down to complicated explanations. For reachability, we know that there are short paths and that this should mean small explanations, but we really have no good intuition about what explanations for matchings should look like. Here is a scatterplot of the times versus sizes of explanation
 
 ![sizes](https://github.com/frankmcsherry/blog/blob/master/assets/provenance/twitter-times-changes.png)
 
-Some of the explanations are big, but not so big. What is going on? Let's do the same scatterplot, but with number of rounds of derivation rather than size of explanation.
+Some of the explanations are big, but not so big; thousands at most. What is going on? Let's do the same scatterplot, but with number of rounds of derivation rather than size of explanation.
 
 ![rounds](https://github.com/frankmcsherry/blog/blob/master/assets/provenance/twitter-times-rounds.png)
 
@@ -352,3 +365,24 @@ The explanations aren't very big, but they do require many rounds to sort out. W
 
 In any case, most of the explanations come back with sub-second latency, so you might still call them interactive. They don't screw up the update latency either, so I can maintain a continually updated view of the many reasons I am at home with `mr_scruffles` tonight. 
 
+### Overhead 
+
+The overhead looks a lot like for connected components. 
+
+![overhead](https://github.com/frankmcsherry/blog/blob/master/assets/provenance/smp-overhead-twitter.png)
+
+There are some multiples of elapsed time to compute the matchings. Weirdly, almost all of this is in `except`, the part where we remember that things didn't happen. If you thin them down a bit, you recover about 2x at the cost of slightly bigger explanations (you may ask for things that didn't happen, but you probably need them explained anyhow in stable matching, if not other algorithms).
+
+## Wrap up
+
+This is totally still on-going research. We have a pile of code we'd like to release. It actually isn't very large, but it is a bit tangled at the moment. There are some macros. Don't look at me like that; you've done this sort of thing before too.
+
+There are in my mind lots of great questions to ask about explaining computations. I think relatively few big data computations don't want explanations in some part of their workflow. They are just too cool and useful. But while we do now have a way to compute and maintain explanations, we have so much to learn about what we *really* need for explanations. 
+
+Are our stable matching explanations actually "over-explanations"; could we thin them down further, improving both performance, but also the value of the explanations?
+
+What are other good examples of computations where explanations would help? Don't say machine learning / deep nets (we tried to warn you!).
+
+Can explanations be used as an information disclosure limitation mechanism? How little do I need to know about a dataset to know why it produced output that affects me?
+
+As always, feel free to ask questions, propose new directions, demand the code be cleaned up faster. I love those things. ;)
